chore(xcode-project): update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,57 @@ Applications/TextMate/resources/DefaultBundles.tbz
 Frameworks/license/src/revoked_serials.cc
 *.capnp.c++
 *.capnp.h
+
+# Xcode
+#
+# gitignore contributors: remember to update macOS.gitignore, Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+
+## macOS
+
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+## Build generated
+build/
+DerivedData/
+
+## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+
+## Other
+*.moved-aside
+*.xcuserstate
+
+## Obj-C/Swift specific
+*.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
